Remove 'Magazine Luiza' from the title tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <title>Kit 42 Peças de Recipientes Herméticos - Organizador de Cozinha | Magazine Luiza</title>
+    <title>Kit 42 Peças de Recipientes Herméticos - Organizador de Cozinha</title>
     <meta name="description" content="Kit completo com 42 peças de recipientes herméticos para organizar sua cozinha. Vedação perfeita, diversos tamanhos, material premium. Compre no Magazine Luiza com frete grátis!">
 
     <meta property="og:title" content="Kit 42 Peças de Recipientes Herméticos - Organizador de Cozinha" />
